<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:id="@+id/activity_main"
    android:background="@color/GUCCI_WHEAT"
    android:padding="@dimen/material_emphasis_medium">

    <TextView
        android:id="@+id/showText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hello"
        android:textColor="@color/GUCCI_GREEN"
        android:layout_gravity="center"
        android:layout_marginBottom="24dp"
        android:textSize="25sp"/>
    <EditText
        android:id="@+id/inpText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/GUCCI_GREEN"
        android:text="@string/from"
        android:ems="10"
        android:layout_marginBottom="30dp"/>
    <Button
        android:id="@+id/btn1"
        android:text="@string/btn_label"
        android:textColor="@color/GUCCI_YELLOW"
        android:backgroundTint="@color/GUCCI_GREEN"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

</LinearLayout>